Correção da versão anterir